[project]
name = "stlt-doodles"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "streamlit>=1.39.0",
    "pandas>=2.2.3",
    "numpy>=2.1.1",
    "streamlit-elements>=0.1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
